# dspace-fulltext-harvester

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  dev-build.yml  prod-promote.yml  stage-build.yml
dfh/: __init__.py  cli.py  config.py  dspace.py  exceptions.py  harvest.py  timdex_dataset.py
tests/: conftest.py  test_cli.py  test_config.py  test_dataset.py  test_dspace.py  test_harvest.py
tests/fixtures/dspace/mets/: 1721.1-139336-missing-text-filegrp.xml  1721.1-139336-text-file-missing-flocat.xml  1721.1-139336-text-filegrp-missing-file.xml  1721.1-139336-text-flocat-missing-href.xml  1721.1-139336.xml
tests/fixtures/timdex/: dspace-1721.1-139336.json
