# We do our best to sync this template with the latest version in our internal documentation.
# For MIT developers, we strongly recommend copying the pyproject.toml template from:
# https://mitlibraries.atlassian.net/wiki/spaces/IN/pages/3432415247/Python+Project+Linters#Template-for-pyproject.toml

[project]
name = "dspace-fulltext-harvester"
version = "2.0.0"
requires-python = ">=3.13"

dependencies = [
    "click>=8.2.1",
    "dspace-rest-client>=0.1.17",
    "joblib>=1.5.3",
    "jsonlines>=4.0.0",
    "requests>=2.33.1",
    "sentry-sdk>=2.34.1",
    "timdex-dataset-api",
]

[dependency-groups]
dev = [
    "coveralls>=4.0.1",
    "ipython>=9.13.0",
    "joblib-stubs>=1.5.3.1.20260117",
    "mypy>=2.1.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["tests/", "output/"]

[[tool.mypy.overrides]]
module = [
    "dspace_rest_client",
    "dspace_rest_client.*",
    "requests",
    "timdex_dataset_api",
    "timdex_dataset_api.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"

[tool.ruff]
target-version = "py313"
line-length = 90
exclude = ["output"]

# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    "C90",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "EM101",
    "EM102",
    "G004",
    "N812",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PTH",
    "S321",
    "TD002",
    "TD003",
    "TRY003"
]

# allow autofix behavior for specified rules
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"

[project.scripts]
dfh = "dfh.cli:main"

[tool.setuptools.packages.find]
include = ["dfh", "dfh.*"]

[tool.uv.sources]
timdex-dataset-api = { git = "https://github.com/MITLibraries/timdex-dataset-api", rev = "USE-531-fulltext-data-type-add" }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
